--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev1": "vite",
+    "dev2": "vite",
     "build": "vite build",
-    "test": "vitest run",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
