--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa2-cors": "^2.0.6",
     "koa": "^2.15.0",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
+    "koa2-cors": "^2.0.6",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
+    "node-fetch": "^3.3.2",
     "router": "^1.3.8"
   }
 }
