--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,23 +2,34 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "test": "jest --forceExit",
+    "dev": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/koa": "^2.13.12",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-router": "^7.4.8",
+    "@types/redis": "^4.0.11",
     "dotenv": "^16.4.5",
-    "koa": "^2.15.0",
+    "esbuild-register": "^3.5.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
+    "koa-ratelimit": "^5.1.0",
     "koa-router": "^12.0.1",
     "koa2-cors": "^2.0.6",
-    "mongodb": "^6.4.0",
-    "mongoose": "^8.2.1",
-    "node-fetch": "^3.3.2",
-    "router": "^1.3.8"
+    "mongoose": "^8.2.1"
   }
 }
