--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index",
   "scripts": {
-    "test": "jest --forceExit",
+    "test": " NODE_ENV=test jest --forceExit",
     "dev": "ts-node src/index.ts"
   },
   "author": "",
